--- a/index.html
+++ b/index.html
@@ -1,42 +1,6 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="UTF-8">
-<title>Prueba Leaflet</title>
-
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-
-<style>
-html, body {
-  margin: 0;
-  height: 100%;
-}
-
-#map {
-  width: 100vw;
-  height: 100vh;
-}
-</style>
-</head>
-
-<body>
-
-<div id="map"></div>
-
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
-<script>
-const map = L.map('map').setView([-33.45, -70.66], 10);
-
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-  maxZoom: 19,
-  attribution: '&copy; OpenStreetMap'
-}).addTo(map);
-
-setTimeout(() => {
-  map.invalidateSize();
-}, 500);
-</script>
-
+<html>
+<body style="background:red; color:white; font-size:40px;">
+FUNCIONA GITHUB PAGES
 </body>
 </html>
