--- a/index.html
+++ b/index.html
@@ -1,6 +1,76 @@
 <!DOCTYPE html>
-<html>
-<body style="background:red; color:white; font-size:40px;">
-FUNCIONA GITHUB PAGES
+<html lang="es">
+<head>
+<meta charset="UTF-8" />
+<title>Mapa Flete RM</title>
+
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+/>
+
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
+
+  #map {
+    width: 100%;
+    height: 100%;
+  }
+</style>
+</head>
+
+<body>
+
+<div id="map"></div>
+
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<script>
+/* =========================
+   MAPA BASE
+========================= */
+
+const map = L.map("map").setView([-33.45, -70.66], 10);
+
+L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+  attribution: "&copy; OpenStreetMap contributors"
+}).addTo(map);
+
+/* =========================
+   COMUNAS RM
+========================= */
+
+fetch(
+  "https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comunas_de_la_RM/FeatureServer/1/query?where=1=1&outFields=*&f=geojson"
+)
+  .then(r => r.json())
+  .then(data => {
+
+    const comunas = L.geoJSON(data, {
+      style: {
+        color: "#444",
+        weight: 1,
+        fillColor: "#74c0fc",
+        fillOpacity: 0.6
+      },
+      onEachFeature: (feature, layer) => {
+        const nombre =
+          feature.properties.NOM_COM ||
+          feature.properties.COMUNA ||
+          "Comuna";
+
+        layer.bindPopup(`<strong>${nombre}</strong>`);
+      }
+    }).addTo(map);
+
+    map.fitBounds(comunas.getBounds());
+  })
+  .catch(err => console.error(err));
+</script>
+
 </body>
 </html>
