--- a/index.html
+++ b/index.html
@@ -63,6 +63,31 @@
     box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     z-index: 999;
   }
+
+  .legend {
+    position: absolute;
+    top: 20px;
+    left: 280px;
+    background: white;
+    padding: 10px 14px;
+    font-size: 13px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    z-index: 999;
+  }
+
+  .legend-line {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .line {
+    width: 30px;
+    height: 4px;
+    background: #c00000;
+  }
 </style>
 </head>
 
@@ -70,7 +95,7 @@
 
 <div class="container">
   <div class="sidebar">
-    <h2>Comunas (Zona A)</h2>
+    <h2>Comunas</h2>
     <div id="lista-comunas"></div>
   </div>
   <div id="map"></div>
@@ -80,18 +105,27 @@
   Seleccione una comuna
 </div>
 
+<div class="legend">
+  <div class="legend-line">
+    <div class="line"></div>
+    Autopista Américo Vespucio
+  </div>
+</div>
+
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <script>
 const FLETE_BASE = 7000;
 
-const ZONA_A = [
-  "Providencia","Santiago","Ñuñoa","La Reina","Macul","Peñalolén",
-  "La Florida","San Joaquín","San Miguel","Pedro Aguirre Cerda",
-  "La Cisterna","El Bosque","La Pintana","Puente Alto","San Bernardo",
-  "Lo Barnechea","Vitacura","Las Condes","Recoleta","Independencia",
-  "Quinta Normal","Estación Central","Cerrillos","Maipú","Pudahuel",
-  "Lo Prado","Cerro Navia","Renca","Conchalí","Huechuraba"
+const COMUNAS_DESPACHO = [
+  "Cerrillos","Cerro Navia","Conchalí","El Bosque","Estación Central",
+  "Huechuraba","Independencia","La Cisterna","La Florida","La Granja",
+  "La Pintana","La Reina","Lampa","Las Condes","Lo Barnechea",
+  "Lo Espejo","Lo Prado","Macul","Maipú","Ñuñoa",
+  "Pedro Aguirre Cerda","Peñalolén","Providencia","Pudahuel",
+  "Puente Alto","Quilicura","Quinta Normal","Recoleta","Renca",
+  "San Bernardo","San Joaquín","San Miguel","San Ramón",
+  "Santiago","Vitacura"
 ];
 
 const colores = [
@@ -125,24 +159,13 @@ function estilo(feature) {
   };
 }
 
-// === AMÉRICO VESPUCIO (aproximado) ===
-L.polyline([
-  [-33.38,-70.74],[-33.34,-70.67],[-33.36,-70.58],
-  [-33.43,-70.54],[-33.52,-70.55],[-33.60,-70.63],
-  [-33.58,-70.72],[-33.48,-70.77],[-33.40,-70.76]
-], {
-  color: "#c00000",
-  weight: 6,
-  opacity: 0.9
-}).addTo(map);
-
 // === CARGA COMUNAS ===
 fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comunas_de_la_RM/FeatureServer/1/query?where=1=1&outFields=*&f=geojson")
   .then(r => r.json())
   .then(data => {
 
     geojson = L.geoJSON(data, {
-      filter: feature => ZONA_A.includes(nombreComuna(feature.properties)),
+      filter: f => COMUNAS_DESPACHO.includes(nombreComuna(f.properties)),
       style: estilo,
       onEachFeature: (feature, layer) => {
 
@@ -170,6 +193,18 @@ fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comuna
     }).addTo(map);
 
     map.fitBounds(geojson.getBounds());
+
+    // === AMÉRICO VESPUCIO (encima del mapa) ===
+    L.polyline([
+      [-33.38,-70.74],[-33.34,-70.67],[-33.36,-70.58],
+      [-33.43,-70.54],[-33.52,-70.55],[-33.60,-70.63],
+      [-33.58,-70.72],[-33.48,-70.77],[-33.40,-70.76]
+    ], {
+      color: "#c00000",
+      weight: 7,
+      opacity: 1
+    }).addTo(map);
+
   });
 </script>
 
