--- a/index.html
+++ b/index.html
@@ -7,87 +7,80 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
 <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    font-family: Arial, sans-serif;
-  }
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: Arial, sans-serif;
+}
 
-  .container {
-    display: flex;
-    height: 100%;
-  }
+.container {
+  display: flex;
+  height: 100%;
+}
 
-  .sidebar {
-    width: 260px;
-    background: #f7f7f7;
-    border-right: 1px solid #ccc;
-    padding: 15px;
-    overflow-y: auto;
-  }
+.sidebar {
+  width: 260px;
+  background: #f7f7f7;
+  border-right: 1px solid #ccc;
+  padding: 15px;
+  overflow-y: auto;
+}
 
-  .sidebar h2 {
-    margin-top: 0;
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
+.sidebar h2 {
+  margin-top: 0;
+  font-size: 18px;
+}
 
-  .comuna {
-    padding: 8px 10px;
-    margin-bottom: 6px;
-    background: white;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px;
-  }
+.comuna {
+  padding: 8px 10px;
+  margin-bottom: 6px;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  cursor: pointer;
+}
 
-  .comuna:hover {
-    background: #eaeaea;
-  }
+.comuna:hover {
+  background: #eaeaea;
+}
 
-  #map {
-    flex: 1;
-  }
+#map {
+  flex: 1;
+}
 
-  .info {
-    position: absolute;
-    bottom: 20px;
-    left: 280px;
-    background: white;
-    padding: 12px 16px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    z-index: 999;
-  }
+.info {
+  position: absolute;
+  bottom: 20px;
+  left: 280px;
+  background: white;
+  padding: 12px 16px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  z-index: 999;
+}
 
-  .legend {
-    position: absolute;
-    top: 20px;
-    left: 280px;
-    background: white;
-    padding: 10px 14px;
-    font-size: 13px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    z-index: 999;
-  }
-
-  .legend-line {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-
-  .line {
-    width: 30px;
-    height: 4px;
-    background: #c00000;
-  }
+.legend {
+  position: absolute;
+  top: 20px;
+  left: 280px;
+  background: white;
+  padding: 10px 14px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  z-index: 999;
+}
+.legend-line {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.legend-color {
+  width: 30px;
+  height: 4px;
+  background: #c00000;
+}
 </style>
 </head>
 
@@ -101,13 +94,11 @@
   <div id="map"></div>
 </div>
 
-<div class="info" id="info">
-  Seleccione una comuna
-</div>
+<div class="info" id="info">Seleccione una comuna</div>
 
 <div class="legend">
   <div class="legend-line">
-    <div class="line"></div>
+    <div class="legend-color"></div>
     Autopista Américo Vespucio
   </div>
 </div>
@@ -118,25 +109,25 @@
 const FLETE_BASE = 7000;
 
 const COMUNAS_DESPACHO = [
-  "Cerrillos","Cerro Navia","Conchalí","El Bosque","Estación Central",
-  "Huechuraba","Independencia","La Cisterna","La Florida","La Granja",
-  "La Pintana","La Reina","Lampa","Las Condes","Lo Barnechea",
-  "Lo Espejo","Lo Prado","Macul","Maipú","Ñuñoa",
-  "Pedro Aguirre Cerda","Peñalolén","Providencia","Pudahuel",
-  "Puente Alto","Quilicura","Quinta Normal","Recoleta","Renca",
-  "San Bernardo","San Joaquín","San Miguel","San Ramón",
-  "Santiago","Vitacura"
+  "CERRILLOS","CERRO NAVIA","CONCHALI","EL BOSQUE","ESTACION CENTRAL",
+  "HUECHURABA","INDEPENDENCIA","LA CISTERNA","LA FLORIDA","LA GRANJA",
+  "LA PINTANA","LA REINA","LAMPA","LAS CONDES","LO BARNECHEA",
+  "LO ESPEJO","LO PRADO","MACUL","MAIPU","ÑUÑOA",
+  "PEDRO AGUIRRE CERDA","PEÑALOLEN","PROVIDENCIA","PUDAHUEL",
+  "PUENTE ALTO","QUILICURA","QUINTA NORMAL","RECOLETA","RENCA",
+  "SAN BERNARDO","SAN JOAQUIN","SAN MIGUEL","SAN RAMON",
+  "SANTIAGO","VITACURA"
 ];
 
-const colores = [
-  "#8dd3c7","#ffffb3","#bebada","#fb8072",
-  "#80b1d3","#fdb462","#b3de69","#fccde5"
-];
+function normalizar(txt) {
+  return txt
+    .normalize("NFD").replace(/[\u0300-\u036f]/g, "")
+    .toUpperCase()
+    .trim();
+}
 
-const map = L.map('map', {
-  minZoom: 9,
-  maxZoom: 12
-}).setView([-33.45, -70.66], 10);
+const map = L.map('map', { minZoom: 9, maxZoom: 12 })
+  .setView([-33.45, -70.66], 10);
 
 map.setMaxBounds([
   [-34.3, -71.7],
@@ -145,19 +136,18 @@ map.setMaxBounds([
 
 let geojson;
 
-function nombreComuna(p) {
-  return p.NOM_COM || p.COMUNA || p.NOMBRE || "";
-}
-
 function estilo(feature) {
-  const index = feature.properties.OBJECTID % colores.length;
   return {
-    fillColor: colores[index],
+    fillColor: "#8dd3c7",
     weight: 1,
     color: "#444",
     fillOpacity: 0.85
   };
 }
+
+// === PANE AUTOPISTA ===
+map.createPane("vespucioPane");
+map.getPane("vespucioPane").style.zIndex = 650;
 
 // === CARGA COMUNAS ===
 fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comunas_de_la_RM/FeatureServer/1/query?where=1=1&outFields=*&f=geojson")
@@ -165,11 +155,13 @@ fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comuna
   .then(data => {
 
     geojson = L.geoJSON(data, {
-      filter: f => COMUNAS_DESPACHO.includes(nombreComuna(f.properties)),
+      filter: f => COMUNAS_DESPACHO.includes(
+        normalizar(f.properties.NOM_COM)
+      ),
       style: estilo,
       onEachFeature: (feature, layer) => {
 
-        const nombre = nombreComuna(feature.properties);
+        const nombre = feature.properties.NOM_COM;
 
         layer.on({
           mouseover: () => layer.setStyle({ weight: 3, color: "#000" }),
@@ -182,8 +174,6 @@ fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comuna
 
         div.onclick = () => {
           map.fitBounds(layer.getBounds());
-          layer.setStyle({ weight: 3, color: "#000" });
-
           document.getElementById("info").innerHTML =
             `<strong>${nombre}</strong><br>Flete: $${FLETE_BASE.toLocaleString("es-CL")}`;
         };
@@ -194,17 +184,17 @@ fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comuna
 
     map.fitBounds(geojson.getBounds());
 
-    // === AMÉRICO VESPUCIO (encima del mapa) ===
+    // === AMÉRICO VESPUCIO (SIEMPRE ARRIBA) ===
     L.polyline([
       [-33.38,-70.74],[-33.34,-70.67],[-33.36,-70.58],
       [-33.43,-70.54],[-33.52,-70.55],[-33.60,-70.63],
       [-33.58,-70.72],[-33.48,-70.77],[-33.40,-70.76]
     ], {
+      pane: "vespucioPane",
       color: "#c00000",
-      weight: 7,
+      weight: 8,
       opacity: 1
     }).addTo(map);
-
   });
 </script>
 
